--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: "jdbc:mysql://localhost:3306/demo"
     username: "root"
-    password: "YUQILINa123123"
+    password: "password"
   redis:
     host: 127.0.0.1
     port: 6379
